force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <label>Supplier Contract</label>
    <pluralLabel>Supplier Contracts</pluralLabel>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>