force-app/main/default/objects/Contract__c/fields/AdvanceAmount__c.field-meta.xml
<CustomField>
    <fullName>AdvanceAmount__c</fullName>
    <label>Advance Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>