force-app/main/default/objects/Contract__c/fields/AdvanceDeposit__c.field-meta.xml
<CustomField>
    <fullName>AdvanceDeposit__c</fullName>
    <label>Advance Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>