force-app/main/default/objects/Contract__c/fields/AdvanceDepositEndDate__c.field-meta.xml
<CustomField>
    <fullName>AdvanceDepositEndDate__c</fullName>
    <label>Advance Deposit End Date</label>
    <type>Date</type>
</CustomField>