force-app/main/default/objects/Contract__c/fields/AdvanceDepositStartDate__c.field-meta.xml
<CustomField>
    <fullName>AdvanceDepositStartDate__c</fullName>
    <label>Advance Deposit Start Date</label>
    <type>Date</type>
</CustomField>