force-app/main/default/objects/Contract__c/fields/ContractDeposit__c.field-meta.xml
<CustomField>
    <fullName>ContractDeposit__c</fullName>
    <description>a deposit for the performance of a contract</description>
    <label>Contract Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>