force-app/main/default/objects/Contract__c/fields/ContractDepositEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDepositEndDate__c</fullName>
    <description>Contract Performance Guarantee Termination Date</description>
    <label>Contract Deposit End Date</label>
    <type>Date</type>
</CustomField>