force-app/main/default/objects/Contract__c/fields/ContractDepositStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDepositStartDate__c</fullName>
    <description>Contract Performance Guarantee Start Date</description>
    <label>Contract Deposit Start Date</label>
    <type>Date</type>
</CustomField>