force-app/main/default/objects/Contract__c/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <description>Electronic contract number</description>
    <label>Electronic Contract Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>