force-app/main/default/objects/Contract__c/fields/ContractPrice__c.field-meta.xml
<CustomField>
    <fullName>ContractPrice__c</fullName>
    <formula>SalesPrice__c  +  VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>