force-app/main/default/objects/Contract__c/fields/ContractTerm__c.field-meta.xml
<CustomField>
    <fullName>ContractTerm__c</fullName>
    <label>Contract Term</label>
    <type>Date</type>
</CustomField>