force-app/main/default/objects/Contract__c/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase_contract</fullName>
            </value>
            <value>
                <fullName>Security_Pledge_Contract</fullName>
            </value>
            <value>
                <fullName>UnitPriceContract</fullName>
            </value>
            <value>
                <fullName>Maintenance_Agreement</fullName>
            </value>
            <value>
                <fullName>Lease_contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>