force-app/main/default/objects/Contract__c/fields/DataField__c.field-meta.xml
<CustomField>
    <fullName>DataField__c</fullName>
    <label>DataField</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>