force-app/main/default/objects/Contract__c/fields/DefectDeposit__c.field-meta.xml
<CustomField>
    <fullName>DefectDeposit__c</fullName>
    <label>Defect Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>