force-app/main/default/objects/Contract__c/fields/DefectDepositEndDate__c.field-meta.xml
<CustomField>
    <fullName>DefectDepositEndDate__c</fullName>
    <description>Defect warranty end date</description>
    <label>Defect Deposit End Date</label>
    <type>Date</type>
</CustomField>