force-app/main/default/objects/Contract__c/fields/DefectDepositStartDate__c.field-meta.xml
<CustomField>
    <fullName>DefectDepositStartDate__c</fullName>
    <description>Defect warranty start date</description>
    <label>Defect Deposit Start Date</label>
    <type>Date</type>
</CustomField>