force-app/main/default/objects/Contract__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>contract termination date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>