force-app/main/default/objects/Contract__c/fields/IsForeign__c.field-meta.xml
<CustomField>
    <fullName>IsForeign__c</fullName>
    <label>Is Foreign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Foreign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>