force-app/main/default/objects/Contract__c/fields/LiquidatedDamages__c.field-meta.xml
<CustomField>
    <fullName>LiquidatedDamages__c</fullName>
    <inlineHelpText>delayed prize money</inlineHelpText>
    <label>Liquidated Damages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>