force-app/main/default/objects/Contract__c/fields/PurchasePlan__c.field-meta.xml
<CustomField>
    <fullName>PurchasePlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Plan</label>
    <referenceTo>PurchasePlan__c</referenceTo>
    <relationshipLabel>Contract</relationshipLabel>
    <relationshipName>Contract8OS</relationshipName>
    <type>Lookup</type>
</CustomField>