force-app/main/default/objects/Contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>ContractSend</fullName>
                <label>Contract Send</label>
            </value>
            <value>
                <fullName>ChangeRequest</fullName>
                <label>Change Request</label>
            </value>
            <value>
                <fullName>ChangeCompleted</fullName>
                <label>Change Completed</label>
            </value>
            <value>
                <fullName>SupplierSigned</fullName>
                <label>Supplier Signed</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>