force-app/main/default/objects/Contract__c/fields/SupplierId__c.field-meta.xml
<CustomField>
    <fullName>SupplierId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Contract</relationshipLabel>
    <relationshipName>Contract</relationshipName>
    <type>Lookup</type>
</CustomField>