force-app/main/default/objects/Contract__c/fields/SupplierSignedDate__c.field-meta.xml
<CustomField>
    <fullName>SupplierSignedDate__c</fullName>
    <label>Supplier Signed Date</label>
    <type>Date</type>
</CustomField>