force-app/main/default/objects/Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>SupplierId__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>ContractDate__c</columns>
    <columns>ContractNumber__c</columns>
    <columns>ApprovalStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>